--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,12 @@
-# I prefer Ctrl+a as the tmux prefix keys
 set -g prefix C-a
-#unbind Ctrl+b, so that it can be used by other applicaitons
 unbind C-b
-#set 256 color terminal
-set -g default-terminal "screen-256color" # colors!
-set -s escape-time 0
+set -sg escape-time 1
 set -g base-index 1
+set -g default-terminal "screen-256color"
+set -g status-bg blue
+set -g status-fg white
+set-option -g history-limit 50000
 setw -g pane-base-index 1
-set -g history-limit 5000
 bind r source-file ~/.tmux.conf \; display "Reloaded"
 bind | split-window -h
 bind - split-window -v
@@ -19,17 +18,7 @@ bind H resize-pane -L 10
 bind J resize-pane -D 10
 bind K resize-pane -U 10
 bind L resize-pane -R 10
-
-# vi-style
-bind -t vi-copy v begin-selection
-bind -t vi-copy C-v rectangle-toggle
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-linecopy
-
 unbind Up
 bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
