--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,13 @@
 set -g prefix C-a
 unbind C-b
+set -g status-keys vi
+set -g history-limit 10000
+setw -g mode-keys vi
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+set -sg escape-time 0
 set -sg escape-time 1
 set -g base-index 1
 set -g default-terminal "screen-256color"
